[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/manaspc.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/mainFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://networking/Network_setup.gd" type="Script" id=3]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[node name="Network_setup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Multiplayer_config" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host_game" type="Button" parent="Multiplayer_config"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -267.5
margin_top = -202.0
margin_right = 267.5
margin_bottom = -26.0
theme = SubResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "Host Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join_game" type="Button" parent="Multiplayer_config"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -267.5
margin_top = 24.0
margin_right = 267.5
margin_bottom = 200.0
theme = SubResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "Join Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Server_ip_address" type="LineEdit" parent="Multiplayer_config"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -429.0
margin_top = 123.0
margin_right = 416.0
margin_bottom = 227.0
custom_fonts/font = SubResource( 2 )
text = "Enter IP Address"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Device_ip_address" type="Label" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -150.0
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Multiplayer_config/Host_game" to="." method="_on_Host_game_pressed"]
[connection signal="pressed" from="Multiplayer_config/Join_game" to="." method="_on_Join_game_pressed"]
